traefikv2/traefik-service.yaml
# ServiceAccount
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: traefik
    release: traefik
  name: traefik
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: perkplexserver.com
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  - name: websecure
    port: 443
    protocol: TCP
    targetPort: 443
  - name: admin
    port: 8100
    protocol: TCP
    targetPort: 8100
  - name: metrics
    port: 8082
    protocol: TCP
    targetPort: 8082
  - name: minecraft
    port: 25565
    protocol: TCP
    targetPort: 25565
  selector:
    app: traefik
    release: traefik
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.1.125
