traefikv2/004-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: traefik-dashboard
  namespace: kube-system
spec:
  rules:
  - host: traefik.perkplex.geekgalaxy.com
    http:
      paths:
      - backend:
          serviceName: traefik
          servicePort: 8100
        path: /
  tls:
  - hosts:
    - traefik.perkplex.geekgalaxy.com
    secretName: cm-traefik-cert
